# Addaat

./: .gitmodules  Tasks.txt
Builds/Android/Addaat/: .gitignore  build.gradle  logcat
Builds/Android/Addaat/app/: CMakeLists.txt  build.gradle
Builds/Android/Addaat/app/src/main/: AndroidManifest.xml
Builds/Android/Addaat/app/src/main/cpp/: Addaat  NOMoneCC
Builds/Android/Addaat/app/src/main/java/com/nomone/: std_lib
Builds/Android/Addaat/app/src/main/java/com/nomone/addaat/: MainActivity.java
Builds/Android/Addaat/app/src/main/res/layout/: activity_main.xml
Builds/Android/Addaat/app/src/main/res/values/: strings.xml
Builds/Android/Addaat/gradle/wrapper/: gradle-wrapper.properties
Builds/Android/Bites/: logcat
Builds/Android/Bites/app/: build.gradle
Builds/Android/Bites/app/src/main/: AndroidManifest.xml
Builds/Android/Bites/app/src/main/java/com/nomone/bites/: MainActivity.java
Builds/Android/Bites/app/src/main/res/layout/: activity_main.xml
Builds/Android/Bites/app/src/main/res/values/: strings.xml
Builds/Linux/: Makefile  test.sh  testCode.addaat
Src/: Addaat.c  Bites.c  CodeGeneration.c  LanguageDefinition.c
Src/Includes/: CodeGeneration.h
